--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-certifi==2018.11.29
+certifi==2019.11.28
 chardet==3.0.4
-idna==2.7
-psycopg2==2.7.6.1
+idna==2.8
+psycopg2-binary==2.8.4
 pyTelegramBotAPI==3.6.6
-redis==3.0.1
-requests==2.20.1
-six==1.11.0
-SQLAlchemy==1.2.14
-urllib3==1.24.1
-sentry-sdk==0.10.2
+redis==3.3.11
+requests==2.22.0
+six==1.13.0
+SQLAlchemy==1.3.12
+urllib3==1.25.7
+sentry-sdk==0.13.5
