Apply main parts of Python.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-\.docker-compose\.env
+# C extensions
+*.so
 
-\.idea/
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# custom
+.docker-compose.env
+
+.idea/
 
 redis-data/
 postgres-data/
